# second_brain_cli

./: .env.sample  .gitignore  README.md  dev-notes.md  pyproject.toml
cli_second_brain/: cli.py  core.py
